k8s/02-ingress-controller/02-tcb-vote-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tcb-vote-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: vote.az.pracimabootcampers.online
    http:
      paths:
      - backend:
          serviceName: tcb-vote-front
          servicePort: 80
        path: /(.*)
