k8s/02-ingress-controller/03-tcb-vote-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tcb-vote-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - vote.az.pracimabootcampers.online
    secretName: letsencrypt-prod

  rules:
  - host: vote.az.pracimabootcampers.online
    http:
      paths:
      - backend:
          serviceName: tcb-vote-front
          servicePort: 80
        path: /(.*)
